dist/1.0/bin/sample/retrieveUnpackaged/objects/OrderComponent__c.object
<CustomObject>
    <description>Components configured  under Order Line</description>
    <fields>
        <fullName>Actiontype__c</fullName>
        <description>Action set by Product Configurator; based on this appropriate actions will be executed in external systems</description>
        <inlineHelpText>Action set by Product Configurator; based on this appropriate actions will be executed in external systems</inlineHelpText>
        <label>Actiontype</label>
        <picklist>
            <picklistValues>
                <fullName>create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Autonum__c</fullName>
        <description>Service Component identifier to be used in PRW system</description>
        <displayFormat>SC{0000000}</displayFormat>
        <inlineHelpText>Service Component identifier to be used in PRW system</inlineHelpText>
        <label>Autonum</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <description>Id of Component in the Billing System</description>
        <inlineHelpText>Id of Component in the Billing System</inlineHelpText>
        <label>Billing ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <description>Date, when billing of this Component should start</description>
        <inlineHelpText>Date, when billing of this Component should start</inlineHelpText>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BundleComponent__c</fullName>
        <description>Lookup to definition of relation between Bundle and Component</description>
        <inlineHelpText>Lookup to definition of relation between Bundle and Component</inlineHelpText>
        <label>Bundle Component</label>
        <referenceTo>Bundle_Component__c</referenceTo>
        <relationshipLabel>Order Components</relationshipLabel>
        <relationshipName>Order_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <description>ID of Component in CSR Database</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of Component in CSR Database</inlineHelpText>
        <label>CSR ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Relation to Component definition from Product Catalog</description>
        <inlineHelpText>Relation to Component definition from Product Catalog</inlineHelpText>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Order Components</relationshipLabel>
        <relationshipName>Order_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Component has already been installed in Billing</description>
        <inlineHelpText>Indicates if Component has already been installed in Billing</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstalledComponentInstanceId__c</fullName>
        <description>Installed Component instance ID from CSR</description>
        <inlineHelpText>Installed Component instance ID from CSR</inlineHelpText>
        <label>Installed Component Instance Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderLine__c</fullName>
        <description>Relation to Order Line, under which the Component was configured</description>
        <inlineHelpText>Relation to Order Line, under which the Component was configured</inlineHelpText>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Order Components</relationshipLabel>
        <relationshipName>Order_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field. Flag used for Component Provisioning process and asynchronous requests (tasks which can not be processed in once transaction)</description>
        <inlineHelpText>Technical field, used for Component Provisioning process</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <description>ID assigned by Product Configurator used later to update Component with any changes</description>
        <externalId>true</externalId>
        <inlineHelpText>ID assigned by Product Configurator used later to update Component with any changes</inlineHelpText>
        <label>SFDC_ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_ID__c</fullName>
        <description>Service ID assigned to the Component</description>
        <inlineHelpText>Service ID assigned to the Component</inlineHelpText>
        <label>Service ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZDL_existing__c</fullName>
        <description>Indicates if ZDL (Zlecenie do Logistyki) has been created for this Component</description>
        <inlineHelpText>Indicates if ZDL (Zlecenie do Logistyki) has been created for this Component</inlineHelpText>
        <label>ZDL existing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Order Component</label>
    <nameField>
        <label>Order Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>